<resources>
    <string name="app_name">MPro Mesh</string>
    <string name="welcome_my_home_network_title">My Home Network</string>
    <string name="welcome_guest_wifi_access_title">Guest WiFi Access</string>
    <string name="welcome_auto_configuration_title">Auto-configuration</string>
    <string name="welcome_my_home_network_description">Secure access to gateway settings and all connected mobile devices, computers, and NAS.</string>
    <string name="welcome_guest_wifi_access_description">Give your house guests basic Internet access to common web, email or online games.</string>
    <string name="welcome_auto_configuration_description">Allow the device to automatically update the wireless settings on the Zyxel APs or wireless repeaters in its network.</string>
    <string name="welcome_start">Start</string>
    <string name="setup_first_time_using_description1">Simple controls for home network</string>
    <string name="setup_first_time_using_description2">Easily expand WiFi coverage by adding extenders</string>
    <string name="setup_first_time_using_description3">Enable / Disable guest WiFi</string>
    <string name="setup_controller_ready_title">Get Your WiFi Router Ready</string>
    <string name="setup_controller_ready_description">Connect the WiFi Router to your modem and power it on.</string>
    <string name="setup_controller_ready_help_connect_description">Connect the WiFi Router to your modem with the Ethernet cable.</string>
    <string name="setup_controller_ready_help_power_description">Plug the WiFI Router into power.</string>
    <string name="setup_controller_ready_help_led_description">Wait till the WiFi LED turns on.</string>
    <string name="setup_connect_controller_title">Connect to WiFi Router</string>
    <string name="setup_connect_controller_description">Connect to the WiFi of the WiFi Router that you want to set up.</string>
    <string name="setup_connect_controller_help">If the WiFi Router has a QR code on its label, you can scan the QR code to get its WiFi and admin\'s credentials.</string>
    <string name="setup_connect_controller_setting_dialog">Go to WiFi Settings of your mobile device and type WiFi name and password to connect.</string>
    <string name="setup_connect_controller_setting_dialog_confirm">Settings</string>
    <string name="setup_connect_controller_setting_dialog_cancel">Cancel</string>
    <string name="setup_connect_controller_format_error_dialog_title">Problem with the QR Code</string>
    <string name="setup_connect_controller_format_error_dialog_description">Scan the QR code on the label of your WiFi Router. If there is no QR code, please choose \'Manual\' in the previous step.</string>
    <string name="setup_connect_controller_format_error_dialog_confirm">Got it</string>
    <string name="setup_connect_controller_scan_ok_dialog_description">Is「MPro Mesh」want to join</string>
    <string name="setup_connect_controller_scan_ok_dialog_confirm">Join</string>
    <string name="setup_connect_controller_next">Connected, Next</string>
    <string name="setup_connect_controller_scan_description">Scan the QR code on the label of your WiFi Router to get its WiFi and admin\'s credentials and connect automatically.</string>
    <string name="setup_connecting_controller_title">Connecting to WiFi Router</string>
    <string name="setup_connecting_controller_description">Please wait.\nThis may take a few seconds.</string>
    <string name="setup_connecting_internet_title">Connecting to the Internet</string>
    <string name="setup_connecting_internet_success_title">Successfully Connect to the Internet!</string>
    <string name="setup_connecting_internet_description">Please wait.\nThis may take a few seconds.</string>
    <string name="setup_login_title">Log In WiFi Router</string>
    <string name="setup_login_description">Enter username and password to continue.</string>
    <string name="setup_login_username">Username</string>
    <string name="setup_login_password">Password</string>
    <string name="setup_login_help_title">Find the default admin username and password on the label of your WiFi Router.</string>
    <string name="setup_login_help_description">If the default admin credentials were changed, enter new username and password to log in.</string>
    <string name="setup_login_label_description">Find the default admin username and password on the label of your WiFi Router.</string>
    <string name="setup_sn_login_description">Enter the serial number to continue.</string>
    <string name="setup_sn_login_serial_number">Serial number</string>
    <string name="setup_sn_login_label_description">Find the unique serial number of your WiFi Router on its label.</string>
    <string name="setup_change_admin_pwd_title">Change Admin Password</string>
    <string name="setup_change_admin_pwd_description">To avoid any unauthorized user accessing your password on the label of your WiFi Router, we recommend to change it.</string>
    <string name="setup_change_admin_pwd_new_password">New Password</string>
    <string name="setup_change_admin_pwd_confirm_new_password">Confirm New Password</string>
    <string name="setup_change_admin_pwd_not_match_error_msg">Password and confirm password does not match</string>
    <string name="setup_name_controller_title">Name Your WiFi Router</string>
    <string name="setup_name_controller_description">Name your WiFi Router after its location.</string>
    <string name="setup_name_controller_location">Location</string>
    <string name="setup_previous_settings_title">Apply Saved Settings</string>
    <string name="setup_previous_settings_description">Saved settings of your WiFi Router are found. You can apply them to this WiFi Router.</string>
    <string name="setup_previous_settings_sub_title">Apply WiFi settings of</string>
    <string name="setup_previous_settings_check_description">Save WiFi setting</string>
    <string name="setup_previous_settings_details"><u>Details</u></string>
    <string name="setup_previous_settings_name_dialog_done">Done</string>
    <string name="setup_previous_settings_details_title">WiFi Settings of</string>
    <string name="setup_previous_settings_details_wifi_title">WIFI NAME &amp; PASSWORD</string>
    <string name="setup_previous_settings_details_network_name_title">Network name</string>
    <string name="setup_previous_settings_details_password_title">Password</string>
    <string name="setup_previous_settings_details_devices_title">LOCAL DEVICE NAMES</string>
    <string name="setup_previous_settings_apply">Apply</string>
    <string name="setup_previous_settings_skip">Skip</string>
    <string name="setup_apply_previous_settings_title">Applying Saved Settings</string>
    <string name="setup_apply_previous_settings_description">Please wait.\nThis may take a few seconds.</string>
    <string name="setup_apply_reconnect_previous_settings_title">Re-Connecting to WiFi Router Using New WiFi Name and Password</string>
    <string name="setup_apply_reconnect_previous_settings_description">Please wait.\nThis may take a few seconds.</string>
    <string name="setup_connect_troubleshooting_cannot_connect_controller_title">Cannot Connect to the WiFi Router</string>
    <string name="setup_connect_troubleshooting_cannot_connect_controller_sub_title">Check the followings.</string>
    <string name="setup_connect_troubleshooting_cannot_connect_controller_description1">Make sure the WiFi Router is powered on and its WiFi LED already turns on.</string>
    <string name="setup_connect_troubleshooting_cannot_connect_controller_description2">Make sure you haven\’t accidentally turned your phone WiFi off. Go to phone settings and make sure that WiFi is toggled on and that Airplane Mode is toggled off. Airplane Mode shuts off your WiFi radios, so if it\’s on, then you won\’t be able to connect.</string>
    <string name="setup_connect_troubleshooting_cannot_connect_controller_description3">If the default credentials were changed, please go to phone settings  and tap the name of the WiFi network that you want to join.</string>
    <string name="setup_connect_troubleshooting_cannot_connect_controller_description4">If you ever reset your WiFi Router, please back to previous page and follow the \"Add\" process to setup your WiFi Router again.</string>
    <string name="setup_connect_troubleshooting_no_internet_title">No Internet Connection</string>
    <string name="setup_connect_troubleshooting_no_internet_sub_title">Check the following troubleshooting guides. If you still have problems, please contact your Internet service provider.</string>
    <string name="setup_connect_troubleshooting_no_internet_description1">Check the hardware connections, and make sure the LEDs are behaving as expected.</string>
    <string name="setup_connect_troubleshooting_no_internet_description2">Make sure you entered your ISP account information correctly in the GUI (Network Setting > Broadband) screen. These fields are case-sensitive, so make sure [Caps Lock] is not on.</string>
    <string name="setup_connect_troubleshooting_no_internet_description3">Disconnect all the cables from your device and reconnect them.</string>
    <string name="setup_connect_troubleshooting_no_internet_description4">If the problem continues, contact your ISP.</string>
    <string name="setup_connect_troubleshooting_cannot_connect_cloud_title">Cannot Connect to the Cloud</string>
    <string name="setup_connect_troubleshooting_cannot_connect_cloud_description1">Make sure your mobile device is connected to the Internet. Check to see whether your cellular data is enabled and working.</string>
    <string name="login_title">Login</string>
    <string name="login_error">Username or Password error</string>
    <string name="internet_status_dialog_good">Good</string>
    <string name="internet_status_dialog_weak">Weak</string>
    <string name="internet_status_dialog_too_close">Too Close</string>
    <string name="internet_status_dialog_na">N/A (Disconnect)</string>
    <string name="internet_status_dialog_good_description">All set, enjoy it.</string>
    <string name="internet_status_dialog_weak_description">Move the extender closer to the gateway.</string>
    <string name="internet_status_dialog_too_close_description">The extender is too close to the gateway, please find another location farer from the gateway.</string>
    <string name="internet_status_dialog_na_description">Make sure the extender is located and the power is on.</string>
    <string name="internet_status_dialog_close">Close</string>
    <string name="mesh_done">Done</string>
    <string name="cloud_mesh_see_tip">Tips</string>
    <string name="cloud_mesh_fail_help">Help</string>
    <string name="cloud_mesh_fail_quit">Quit</string>
    <string name="cloud_mesh_fail_title">Cannot Connect with Your Mesh Device</string>
    <string name="cloud_mesh_fail_description">Place your Mesh Device closer to the WiFi Router, then retry connecting.</string>
    <string name="cloud_mesh_cable_title">Use the Ethernet Cable to Connect Your Mesh Device to the WiFi Router</string>
    <string name="cloud_mesh_cable_description">When connected, your Mesh Device will have the same WiFi name and password as your home WiFi network.</string>
    <string name="remove_site_dialog_title">Remove \'%s\' from the Cloud</string>
    <string name="remove_site_dialog_description">You will need to set up the WiFi Router again to bind it back to the cloud.</string>
    <string name="remove_site_dialog_preserved_setting_description">Keep its saved WiFi settings for later setup</string>
    <string name="remove_site_dialog_remove">Remove</string>
    <string name="remove_site_dialog_cancel">Cancel</string>
</resources>