<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cloud_mesh_fail_quit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_size_20dp_in_1080"
        android:layout_marginLeft="@dimen/layout_size_20dp_in_1080"
        android:textSize="@dimen/text_size_18sp_in_1080"
        android:textColor="@color/color_575757"
        android:text="@string/cloud_mesh_fail_quit"/>

    <TextView
        android:id="@+id/cloud_mesh_fail_help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/layout_size_20dp_in_1080"
        android:layout_marginRight="@dimen/layout_size_20dp_in_1080"
        android:textSize="@dimen/text_size_18sp_in_1080"
        android:textColor="@color/color_575757"
        android:text="@string/cloud_mesh_fail_help"/>

    <RelativeLayout
        android:id="@+id/cloud_mesh_fail_content_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_size_30dp_in_1080"
        android:layout_toLeftOf="@+id/cloud_mesh_fail_help_text"
        android:layout_below="@+id/cloud_mesh_fail_quit_text"
        android:layout_toRightOf="@+id/cloud_mesh_fail_quit_text">

        <TextView
            android:id="@+id/cloud_mesh_fail_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22sp_in_1080"
            android:textColor="@color/color_ff2837"
            android:text="@string/cloud_mesh_fail_title"/>

        <TextView
            android:id="@+id/cloud_mesh_fail_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cloud_mesh_fail_title_text"
            android:layout_marginTop="@dimen/layout_size_15dp_in_1080"
            android:text="@string/cloud_mesh_fail_description"
            android:textColor="@color/color_575757"
            android:textSize="@dimen/text_size_18sp_in_1080"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/cloud_mesh_fail_content_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_size_60dp_in_1080"
        android:layout_below="@+id/cloud_mesh_fail_content_relative"
        android:src="@drawable/n_addmesh_wifi4"/>

    <ImageView
        android:id="@+id/cloud_mesh_fail_retry_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/layout_size_30dp_in_1080"
        android:src="@drawable/btn_retry"/>

</RelativeLayout>